Some changes, added new files

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,17 +1,48 @@
-# LION PLUGIN
-# MADE BY MRLION
+#------- WHITELIST --------
+whitelist-enabled: true
+whitelisted-players:
+  - L0stedMrlion
+whitelist-kick-message: "&cYou are not on the whitelist. Contact an admin for assistance."
+
+# ------- JOIN & QUIT MESSAGES ---------
+
+join-message: "&6{player} &7has joined the server!"
+quit-message: "&6{player} &7has left the server :("
+
+#--------- BLOCKED COMMANDS --------
+
+blocked-commands:
+  - pl
+  - plugins
+  - version
+  - bukkit:plugins
+  - bukkit:pl
+  - bukkit:?
+  - help
+  - bukkit:help
+  - about
+  - bukkit:about
+  - bukkit:ver
+  - bukkit:version
+  - callback
+  - paper:callback
+  - tell
+  - minecraft:tell
+blocked-commands-no-perms: "&cYou don't have permission to execute this command!"
+
+# ------- OTHER MESSAGES ---------
 
 msg: #Placeholders {sender}, {receiver} and {message}
-  outgoing-message-format: '&7[&b{sender} -> {receiver}&7] {message}'
-  incoming-message-format: '&7[&b{sender} -> you&7] {message}'
+  outgoing-message-format: '&8[&6{sender} &8-> &6{receiver}&8] &7{message}'
+  incoming-message-format: '&8[&6{sender} &8-> &6You&8] &7{message}'
 
 fly:
   no-permission-fly: "&cYou don't have permission for this!"
-  player-only: "&cOnly players can use this command!"
+  player-only: "&cConsole cant use this command!"
 
 reload:
-  no-permission-reload: "No perms to reload"
-  config-reloaded: "Reloaded"
+  no-permission-reload: "&cYou don't have permission to reload the config."
+  config-reloaded: "&aConfig successfully reloaded!"
 
 heal:
   self-heal-message: "&aYou have been healed!"
@@ -19,3 +50,9 @@ heal:
   all-heal-message: "&aAll players have been healed!"
   player-not-found-message: "&cPlayer not found!"
   console-usage-message: "&cUsage: /heal <player/all>"
+
+whitelist:
+  player-added: "&a{player} has been added to the whitelist."
+  player-removed: "&c{player} has been removed from the whitelist."
+
+
