Added some new prompts to config.yml, fixed permission check in the blocked commands, imported new /ping added new logic for the /ping command and registered command in the plugin.yml

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -55,4 +55,7 @@ whitelist:
   player-added: "&a{player} has been added to the whitelist."
   player-removed: "&c{player} has been removed from the whitelist."
 
+ping-message: "&aYour ping is: &b{ping}ms"
+
+
 
