--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -22,3 +22,6 @@ commands:
   lwhitelist:
     description: Add player to our own whitelist
     usage: /lwhitelist <player>
+  ping:
+    description: Get you ping
+    usage: /ping
