--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: LionPlugin
 author: Mrlion
 description: "An utility plugin, made by Mrlion for his servers"
-version: "BUILD-396"
+version: "BUILD-400"
 main: me.mrlion.lionplugin.LionPlugin
 api-version: '1.20'
 resources:
@@ -14,13 +14,13 @@ commands:
     description: Heals you or everyone
     usage: /heal <player/all>
   msg:
-    description: Message a specific player
+    description: Send a private message a specific player
     usage: /msg <player> <message>
   lreload:
-    description: Reloads config.yml
+    description: Reloads config
     usage: /lreload
   lwhitelist:
-    description: Add player to our own whitelist
+    description: Add player to our whitelist system
     usage: /lwhitelist <player>
   ping:
     description: Get your ping
