--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -30,6 +30,7 @@ blocked-commands:
   - paper:callback
   - tell
   - minecraft:tell
+  - reload
 blocked-commands-no-perms: "&cYou don't have permission to execute this command!"
 
 # ------- OTHER MESSAGES ---------
@@ -43,7 +44,7 @@ fly:
   player-only: "&cConsole cant use this command!"
 
 reload:
-  no-permission-reload: "&cYou don't have permission to execute this command!"
+  no-permission-reload: "&cYou don't have permission to use this command!"
   config-reloaded: "&aConfig successfully reloaded!"
 
 heal:
