--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,3 @@
-#------- WHITELIST --------
-whitelist-enabled: true
-whitelisted-players:
-  - Player1
-whitelist-kick-message: "&cʟɪᴏɴ's ᴘʀᴏᴊᴇᴄᴛ"
-whitelist-usage: "&cUsage /lwhitelist <remove/add> <player>"
-
 # ------- JOIN & QUIT MESSAGES ---------
 
 # Can be used placeholders {player}
@@ -12,7 +5,6 @@ join-message: "&6{player} &7has joined the server!"
 quit-message: "&6{player} &7has left the server :("
 
 #--------- BLOCKED COMMANDS --------
-
 blocked-commands:
   - pl
   - plugins
@@ -40,14 +32,18 @@ other:
 msg: # Can be used placeholders {sender}, {receiver} and {message}
   outgoing-message-format: "&6{sender} &8-> &6{receiver}&7: &7{message}"
   incoming-message-format: "&6{sender} &8-> &6You&7: &7{message}"
+  usage: "&cUsage: /msg <player> <message>"
+  player-not-found: "&cPlayer not found!"
 
 fly:
   player-only: "&cConsole cant use this command!"
+  no-permissions: "&cYou don't have permission to use this command!"
 
 reload:
   config-reloaded: "&aConfig successfully reloaded!"
 
 heal:
+  no-permissions: "&cYou don't have permission to use this command!"
   self-heal-message: "&aYou have been healed!"
   other-heal-message: "&aYou have been healed by {healer}!"
   all-heal-message: "&aAll players have been healed!"
@@ -65,6 +61,7 @@ ping:
 vanish:
   vanished-message: "&aYou have vanished."
   unvanished-message: "&cYou are now visible."
+  no-permissions: "&cYou don't have permission to use this command!"
 
 invalidmessage:
   custom-command-not-found-message: "&cThis command doesn't exist! Did you type it right?"
