added newest kotlin, java removed, Kotlin better...

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: LionPlugin
 author: Mrlion
-description: "An utility plugin, made by Mrlion for his servers"
-version: "BUILD-433"
+description: "An utility plugin, made by Mrlion for his server :)"
+version: "BUILD-638"
 main: me.mrlion.lionplugin.LionPlugin
 api-version: '1.20'
 resources:
