--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ description: "An utility plugin, made by Mrlion for his server :)"
 version: "BUILD-1365"
 main: me.mrlion.lionplugin.LionPlugin
 api-version: '1.20'
+load: POSTWORLD
 resources:
   - config.yml
 commands:
