changed in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@
 *.rar
 hs_err_pid*
 replay_pid*
-.gradle/*
-build/*
-gradle/*
-.idea/*
-target/*
+.gradle/
+build/
+gradle/
+.idea/
+target/
+out/
