some changes in the config.yml

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,12 +18,9 @@ blocked-commands:
   - bukkit:about
   - bukkit:ver
   - bukkit:version
-  - reload
 blocked-commands-no-perms: "&csʏsᴛᴇᴍ &8» &cYou don't have permission to execute this command!"
 
 # ------- OTHER MESSAGES ---------
-other:
-  no-perms: "&csʏsᴛᴇᴍ &8» &cYou don't have permission to use this command!"
 
 msg: # Can be used placeholders {sender}, {receiver} and {message}
   outgoing-message-format: "&6sʏsᴛᴇᴍ &8» &6{sender} &8-> &6{receiver}&7: &7{message}"
@@ -38,25 +35,20 @@ reload:
   config-reloaded: "&6sʏsᴛᴇᴍ &8»&aConfig successfully reloaded!"
 
 heal:
-  no-permissions: "&cYou don't have permission to use this command!"
-  self-heal-message: "&aYou have been healed!"
-  other-heal-message: "&aYou have been healed by {healer}!"
-  all-heal-message: "&aAll players have been healed!"
-  player-not-found-message: "&cPlayer not found!"
-  console-usage-message: "&cUsage: /heal <player/all>"
+  no-permissions: "&csʏsᴛᴇᴍ &8» &cYou don't have permission to use this command!"
+  self-heal-message: "&asʏsᴛᴇᴍ &8» &aYou have been healed!"
+  other-heal-message: "&asʏsᴛᴇᴍ &8» &aYou have been healed by {healer}!"
+  all-heal-message: "&asʏsᴛᴇᴍ &8» &aAll players have been healed!"
+  player-not-found-message: "&csʏsᴛᴇᴍ &8» &cPlayer not found!"
+  console-usage-message: "&csʏsᴛᴇᴍ &8» &cUsage: /heal <player/all>"
 
 whitelist:
   whitelisted-players:
     - L0stedMrlion
-  kick-message: "You are not whitelisted on this server"
+  kick-message: "&cYou are not whitelisted on our server! If you think this is a mistake contact Mrlion!"
 
 ping:
-  ping-message: "&7Your ping is &6{ping}ms"
-
-vanish:
-  vanished-message: "&aYou have vanished."
-  unvanished-message: "&cYou are now visible."
-  no-permissions: "&cYou don't have permission to use this command!"
+  ping-message: "&6sʏsᴛᴇᴍ &8» &7Your ping is &6{ping}ms"
 
 invalidmessage:
   custom-command-not-found-message: "&cThis command doesn't exist! Did you type it right?"
