--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm'
 }
 
 group = 'me.mrlion'
-version = 'BUILD-1623'
+version = '1.02'
 
 repositories {
     mavenCentral()
@@ -45,7 +44,4 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
-}
-kotlin {
-    jvmToolchain(17)
 }
