--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: LionPlugin
 author: Mrlion
 description: "An utility plugin, made by Mrlion for his server :)"
-version: "BUILD-1623"
+version: "1.02"
 main: me.mrlion.lionplugin.LionPlugin
 api-version: '1.20'
 resources:
