--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -40,7 +40,8 @@ fly:
 
 reload:
   config-reloaded: "&6sʏsᴛᴇᴍ &8»&aConfig successfully reloaded!"
-  no-perms: "&cYou don't have permission to use this command."
+  no-permissions: "&cYou don't have permission to use this command."
+  error: "&cAn error occurred while reloading the config. See the console for more"
 
 heal:
   no-permissions: "&csʏsᴛᴇᴍ &8» &cYou don't have permission to use this command!"
